--- a/conf/application.conf
+++ b/conf/application.conf
@@ -4,13 +4,18 @@ akka {
   loglevel = "DEBUG"
 }
 
-slick {
-  dbs {
-    default {
-      driver=org.h2.Driver
-      url = "jdbc:h2:mem:play;MODE=MYSQL;DATABASE_TO_UPPER=false"
+db {
+  default {
+    driver = com.mysql.jdbc.Driver
+    url = "jdbc:mysql://mysql:3306/h4cker?useSSL=false"
+    username = root
+    password = root
+    useSSL = false
+    migration {
+      showInsertQuery=true
+      validateOnMigrate=false
     }
   }
 }
 
-# play.modules.enabled += "org.flywaydb.play.PlayModule"
+play.modules.enabled += "org.flywaydb.play.PlayModule"
