--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,21 +1,25 @@
 # https://www.playframework.com/documentation/latest/Configuration
 
-akka {
-  loglevel = "DEBUG"
-}
 
 db {
+
   default {
     driver = com.mysql.jdbc.Driver
     url = "jdbc:mysql://mysql:3306/h4cker?useSSL=false"
     username = root
     password = root
     useSSL = false
+    numThreads = 15
+    maxConnections = 15
     migration {
       showInsertQuery=true
       validateOnMigrate=false
     }
+    hikaricp {
+      maximumPoolSize = 15
+    }
   }
 }
+
 
 play.modules.enabled += "org.flywaydb.play.PlayModule"
