--- a/conf/application.conf
+++ b/conf/application.conf
@@ -12,8 +12,9 @@ db {
     numThreads = 15
     maxConnections = 15
     migration {
-      showInsertQuery=true
-      validateOnMigrate=false
+      showInsertQuery = true
+      validateOnMigrate = true
+      outOfOrder = true
     }
     hikaricp {
       maximumPoolSize = 15
