--- a/conf/application.conf
+++ b/conf/application.conf
@@ -24,3 +24,8 @@ db {
 
 
 play.modules.enabled += "org.flywaydb.play.PlayModule"
+
+play.filters.hosts {
+  # Allow requests to example.com, its subdomains, and localhost:9000.
+  allowed = [".example.com", "192.168.10.108:9000"]
+}
