--- a/conf/application.conf
+++ b/conf/application.conf
@@ -22,7 +22,7 @@ db {
   }
 }
 
-
+play.modules.enabled += "modules.SilhouetteModule"
 play.modules.enabled += "org.flywaydb.play.PlayModule"
 
 play.filters.hosts {
@@ -30,3 +30,5 @@ play.filters.hosts {
   allowed = [".example.com", "192.168.10.108:9000", "localhost:9000"]
 
 }
+
+include "silhouette.conf"
