--- a/conf/silhouette.conf
+++ b/conf/silhouette.conf
@@ -18,9 +18,7 @@ silhouette {
   authenticator.issuerClaim="play-angular-silhouette"
   authenticator.encryptSubject=true
   authenticator.authenticatorExpiry=12 hours
-  authenticator.sharedSecret="changeme"
-  authenticator.sharedSecret=${?AUTHENTICATOR_SHARED_SECRET}
-
+  authenticator.sharedSecret="lgiQ8XY:BZfcojU^gowIEsb>?HP?t9MSs9:^X?ZB5y0H4DaJm2k5<6mL9J>PXdEy"
   authenticator.rememberMe.authenticatorExpiry=30 days
   authenticator.rememberMe.authenticatorIdleTimeout=5 days
   # A unique encryption key
