Added Auth system

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -23,7 +23,9 @@ db {
 }
 
 play.modules.enabled += "modules.SilhouetteModule"
+play.http.filters = "utils.filters.MyFilters"
 play.modules.enabled += "org.flywaydb.play.PlayModule"
+play.filters.disabled += play.filters.csrf.CSRFFilter
 
 play.filters.hosts {
   # Allow requests to example.com, its subdomains, and localhost:9000.
