Move configure to environment variables

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -5,23 +5,23 @@ db {
 
   default {
     driver = com.mysql.jdbc.Driver
-    url = "jdbc:mysql://mysql:3306/h4cker?useSSL=false"
-    username = root
-    password = root
+    url = ${?DB_URL}
+    username = ${?DB_USERNAME}
+    password = ${?DB_PASSWORD}
     useSSL = false
-    numThreads = 15
-    maxConnections = 15
+    numThreads = 2 
+    maxConnections = 2 
     migration {
       showInsertQuery = true
       validateOnMigrate = true
       outOfOrder = true
     }
     hikaricp {
-      maximumPoolSize = 15
+      maximumPoolSize = 2 
     }
   }
 }
-
+play.http.secret.key=${?APPLICATION_SECRET}
 play.modules.enabled += "modules.SilhouetteModule"
 play.http.filters = "utils.filters.MyFilters"
 play.modules.enabled += "org.flywaydb.play.PlayModule"
@@ -29,7 +29,7 @@ play.filters.disabled += play.filters.csrf.CSRFFilter
 
 play.filters.hosts {
   # Allow requests to example.com, its subdomains, and localhost:9000.
-  allowed = [".example.com", "192.168.10.108:9000", "localhost:9000"]
+  allowed = [".example.com", "192.168.10.108:9000", "localhost:9000", "localhost:5000"]
 
 }
 
