--- a/conf/application.conf
+++ b/conf/application.conf
@@ -29,7 +29,7 @@ play.filters.disabled += play.filters.csrf.CSRFFilter
 
 play.filters.hosts {
   # Allow requests to example.com, its subdomains, and localhost:9000.
-  allowed = [".example.com", "192.168.10.108:9000", "localhost:9000", "localhost:5000"]
+  allowed = ["ioth4ck3r.herokuapp.com", "192.168.10.108:9000", "localhost:9000", "localhost:5000"]
 
 }
 
