Added SMTP Mail service

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -33,4 +33,13 @@ play.filters.hosts {
 
 }
 
+play.mailer {
+  host = ${?SENDGRID_SMTP_SERVER}
+  user = ${?SENDGRID_API_USERNAME}
+  password = ${?SENDGRID_API_PASSWORD}
+  port = ${?SENDGRID_SMTP_PORT}
+  tls = yes
+  debug = yes // (defaults to no, to take effect you also need to set the log level to "DEBUG" for the "play.mailer" logger)
+}
+
 include "silhouette.conf"
