Rename DB Instances

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -23,6 +23,7 @@ db {
 }
 play.http.secret.key=${?APPLICATION_SECRET}
 play.modules.enabled += "modules.SilhouetteModule"
+play.modules.enabled += "modules.Oauth2Module"
 play.http.filters = "utils.filters.MyFilters"
 play.modules.enabled += "org.flywaydb.play.PlayModule"
 play.filters.disabled += play.filters.csrf.CSRFFilter
