--- a/conf/application.conf
+++ b/conf/application.conf
@@ -4,20 +4,22 @@
 db {
 
   default {
-    driver = com.mysql.jdbc.Driver
+    driver = com.mysql.cj.jdbc.Driver
     url = ${?DB_URL}
     username = ${?DB_USERNAME}
     password = ${?DB_PASSWORD}
+    logSql=true
+
     useSSL = false
-    numThreads = 2 
-    maxConnections = 2 
+    numThreads = 10 
+    maxConnections = 10
     migration {
       showInsertQuery = true
       validateOnMigrate = true
       outOfOrder = true
     }
     hikaricp {
-      maximumPoolSize = 2 
+      maximumPoolSize = 10
     }
   }
 }
