--- a/conf/silhouette.conf
+++ b/conf/silhouette.conf
@@ -1,6 +1,7 @@
 silhouette {
   # Social state handler
-  socialStateHandler.signer.key = "[changeme]"
+  socialStateHandler.signer.key = ${?CSRFSTATEITEMHANDLER_SIGNER_KEY}
+
 
   # CSRF state item handler settings
   csrfStateItemHandler.cookieName="OAuth2State"
@@ -23,7 +24,7 @@ silhouette {
   authenticator.rememberMe.authenticatorIdleTimeout=5 days
   # A unique encryption key
 
-  authenticator.crypter.key = "[changeme]" 
+  authenticator.crypter.key = ${?CSRFSTATEITEMHANDLER_SIGNER_KEY}
   # OAuth1 token secret provider settings
   oauth1TokenSecretProvider.cookieName="OAuth1TokenSecret"
   oauth1TokenSecretProvider.cookiePath="/"
