Upgrade db to postgre

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -4,15 +4,15 @@
 db {
 
   default {
-    driver = com.mysql.cj.jdbc.Driver
+    driver = org.postgresql.Driver
     url = ${?DB_URL}
     username = ${?DB_USERNAME}
     password = ${?DB_PASSWORD}
     logSql=true
 
     useSSL = false
-    numThreads = 10 
-    maxConnections = 10
+    numThreads = 2
+    maxConnections = 2
     migration {
       showInsertQuery = true
       validateOnMigrate = true
