--- a/.github/workflows/upload_docker_image.yml
+++ b/.github/workflows/upload_docker_image.yml
@@ -16,11 +16,7 @@ jobs:
       with:
         java-version: '11'
         distribution: 'adopt'
-    - name: Run tests
-      run: sbt test
-
-    -
-      name: Login to GitHub Container Registry
+    - name: Login to GitHub Container Registry
       uses: docker/login-action@v1
       with:
         registry: ghcr.io
