--- a/.github/workflows/upload_docker_image.yml
+++ b/.github/workflows/upload_docker_image.yml
@@ -25,3 +25,6 @@ jobs:
 
     - name: Build and push Docker Image
       run: sbt stagePackage/docker:publish
+      env:
+        DOCKER_IMAGE_HOST: ${{ secrets.DOCKER_IMAGE_HOST }}
+        DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
