--- a/conf/base.conf
+++ b/conf/base.conf
@@ -25,7 +25,7 @@ db {
 }
 play.http.secret.key=${?APPLICATION_SECRET}
 play.modules.enabled += "modules.SilhouetteModule"
-play.modules.enabled += "device.modules.SilhouetteModule2"
+play.modules.enabled += "device.modules.DeviceSilhouetteModule"
 play.modules.enabled += "modules.Oauth2Module"
 play.http.filters = "utils.filters.MyFilters"
 play.filters.disabled += play.filters.csrf.CSRFFilter
