Add device apis

--- a/conf/base.conf
+++ b/conf/base.conf
@@ -26,6 +26,7 @@ db {
 play.http.secret.key=${?APPLICATION_SECRET}
 play.modules.enabled += "modules.SilhouetteModule"
 play.modules.enabled += "device.modules.DeviceSilhouetteModule"
+play.modules.enabled += "device.modules.DeviceModule"
 play.modules.enabled += "modules.Oauth2Module"
 play.http.filters = "utils.filters.MyFilters"
 play.filters.disabled += play.filters.csrf.CSRFFilter
